--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "nuxt-buefy": "^0.4.3"
+    "nuxt-buefy": "^0.4.3",
+    "pretty-hrtime": "^1.0.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
